--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -54,9 +54,9 @@
                 android:id="@+id/ninchat_p2p_video_view"
                 layout="@layout/ninchat_p2p_video_container"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/ninchat_chat_activity_video_view_height"
+                android:layout_height="match_parent"
                 android:visibility="gone"
-                tools:visibility="gone" />
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/ninchat_conference_view"
@@ -64,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone"
-                tools:visibility="visible" />
+                tools:visibility="gone" />
 
 
             <FrameLayout
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone"
-                tools:visibility="visible" />
+                tools:visibility="gone" />
 
         </RelativeLayout>
 
