--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -39,14 +39,14 @@
         android:weightSum="3"
         android:layout_below="@+id/ninchat_titlebar"
         android:layout_alignWithParentIfMissing="true"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:baselineAligned="true">
         <!--Both P2P and conference view in a group-->
         <RelativeLayout
-            android:layout_weight="0.9"
+            android:layout_weight="1.7"
             android:id="@+id/conference_or_p2p_view_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:visibility="visible"
             tools:visibility="visible">
 
@@ -78,10 +78,10 @@
 
         <!--Chat message list and editor view group-->
         <RelativeLayout
-            android:layout_weight="2.1"
+            android:layout_weight="1.3"
             android:id="@+id/chat_message_list_and_editor"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:visibility="visible"
             tools:visibility="visible">
 
