--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -33,20 +33,20 @@
         tools:visibility="gone" />
 
     <LinearLayout
+        android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/content_view"
-        android:weightSum="3"
-        android:layout_below="@+id/ninchat_titlebar"
         android:layout_alignWithParentIfMissing="true"
-        android:orientation="horizontal"
-        android:baselineAligned="true">
+        android:layout_below="@+id/ninchat_titlebar"
+        android:baselineAligned="true"
+        android:orientation="vertical"
+        android:weightSum="3">
         <!--Both P2P and conference view in a group-->
         <RelativeLayout
-            android:layout_weight="1.7"
             android:id="@+id/conference_or_p2p_view_container"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.9"
             android:visibility="visible"
             tools:visibility="visible">
 
@@ -78,10 +78,10 @@
 
         <!--Chat message list and editor view group-->
         <RelativeLayout
-            android:layout_weight="1.3"
             android:id="@+id/chat_message_list_and_editor"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.1"
             android:visibility="visible"
             tools:visibility="visible">
 
