--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -71,8 +71,9 @@
                 android:id="@+id/jitsi_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/black"
                 android:visibility="gone"
-                tools:visibility="gone" />
+                tools:visibility="visible" />
 
         </RelativeLayout>
 
