use fix width and height to fix video flickering issue

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -67,7 +67,8 @@
                 tools:visibility="visible" />
 
 
-            <FrameLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:id="@+id/jitsi_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
