--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -74,7 +74,14 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/black"
                 android:visibility="gone"
-                tools:visibility="visible" />
+                tools:visibility="visible">
+
+                <org.jitsi.meet.sdk.JitsiMeetView
+                    android:id="@+id/jitsi_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+            </LinearLayout>
 
         </RelativeLayout>
 
