--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -34,267 +34,19 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/ninchat_chat_message_agent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/ninchat_chat_activity_message_title_top_margin"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <ImageView
-            android:id="@+id/ninchat_chat_message_agent_avatar"
-            android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
-            android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_chat_avatar_left" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignWithParentIfMissing="true"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/ninchat_chat_message_agent_avatar"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/ninchat_chat_message_agent_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginBottom="5dp"
-                android:minHeight="@dimen/ninchat_chat_activity_message_title_height"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_agent_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/ninchat_color_chat_name"
-                    tools:text="Agent" />
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_agent_timestamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    android:textColor="@color/ninchat_color_chat_timestamp"
-                    tools:text="00:00" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ninchat_chat_message_agent_wrapper"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:background="@drawable/ninchat_chat_bubble_left_repeated">
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_agent_message"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoLink="none"
-                    android:textColor="@color/ninchat_color_chat_bubble_left_text"
-                    android:textColorLink="@color/ninchat_color_chat_bubble_left_link"
-                    android:textIsSelectable="true"
-                    android:visibility="gone"
-                    tools:text="Message from agent"
-                    tools:visibility="visible" />
-
-                <LinearLayout
-                    android:id="@+id/ninchat_chat_message_agent_multichoice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone"
-                    tools:visibility="visible">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/ninchat_chat_message_agent_multichoice_options"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:itemCount="3"
-                        tools:listitem="@layout/item_chat_multichoice_unselected"
-                        tools:orientation="vertical" />
-
-                    <Button
-                        android:id="@+id/ninchat_chat_message_agent_multichoice_send"
-                        style="@style/NinchatTheme.Button.MultiChoice.Send"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/ninchat_send_button_height"
-                        android:layout_gravity="end"
-                        tools:text="Send" />
-
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:id="@+id/ninchat_chat_message_agent_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:background="@color/ninchat_colorPrimaryDark"
-                        android:visibility="gone"
-                        tools:layout_height="150dp"
-                        tools:layout_width="150dp"
-                        tools:src="@drawable/ninchat_logo"
-                        tools:visibility="visible" />
-
-                    <RelativeLayout
-                        android:id="@+id/ninchat_chat_message_agent_video_play_image"
-                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
-                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/ninchat_icon_chat_play_video_background"
-                        android:visibility="gone"
-                        tools:visibility="visible">
-
-                        <ImageView
-                            android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                            android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                            android:layout_centerInParent="true"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/ninchat_icon_chat_play_video" />
-
-                    </RelativeLayout>
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:id="@+id/ninchat_chat_message_agent_writing"
-                    android:layout_width="@dimen/ninchat_chat_activity_message_writing_indicator_width"
-                    android:layout_height="@dimen/ninchat_chat_activity_message_writing_indicator_height"
-                    android:visibility="gone"
-                    tools:src="@drawable/ninchat_writing_10"
-                    tools:visibility="visible" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/ninchat_chat_message_user"
+    <include
+        layout="@layout/ninchat_agent_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/ninchat_chat_message_user_avatar"
-            android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
-            android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_avatar_margin"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_chat_avatar_right" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignWithParentIfMissing="true"
-            android:layout_alignParentTop="true"
-            tools:visibility="gone"
-            android:layout_toStartOf="@id/ninchat_chat_message_user_avatar"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/ninchat_chat_message_user_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
-                android:layout_marginBottom="5dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_user_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/ninchat_color_chat_name"
-                    android:textColorLink="@color/ninchat_color_chat_bubble_right_link"
-                    tools:text="User" />
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_user_timestamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    android:textColor="@color/ninchat_color_chat_timestamp"
-                    tools:text="00:00" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ninchat_chat_message_user_wrapper"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:orientation="vertical"
-                tools:background="@drawable/ninchat_chat_bubble_right_repeated">
-
-                <TextView
-                    android:id="@+id/ninchat_chat_message_user_message"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textIsSelectable="true"
-                    android:textColor="@color/ninchat_color_chat_bubble_right_text"
-                    tools:text="Message from user" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:id="@+id/ninchat_chat_message_user_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        tools:layout_height="150dp"
-                        tools:layout_width="150dp"
-                        tools:src="@drawable/ninchat_logo" />
-
-                    <RelativeLayout
-                        android:id="@+id/ninchat_chat_message_user_video_play_image"
-                        android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
-                        android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/ninchat_icon_chat_play_video_background"
-                        android:visibility="gone"
-                        tools:visibility="visible">
-
-                        <ImageView
-                            android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                            android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                            android:layout_centerInParent="true"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/ninchat_icon_chat_play_video" />
-
-                    </RelativeLayout>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </RelativeLayout>
+    <include
+        layout="@layout/ninchat_customer_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/ninchat_chat_message_end"
