--- a/ninchatsdk/src/main/res/drawable/ninchat_translucent_background.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_translucent_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <gradient
-        android:startColor="#80FFFFFF"
-        android:endColor="#00000000"
+        android:startColor="#e9e9e9"
+        android:endColor="@android:color/transparent"
         android:angle="90"
         />
 
