--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -39,7 +39,7 @@
         android:background="@android:color/black"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <org.jitsi.meet.sdk.JitsiMeetView
             android:id="@+id/jitsi_view"
@@ -81,6 +81,15 @@
                 android:layout_height="match_parent"
                 android:visibility="gone"
                 tools:visibility="visible" />
+
+            <RelativeLayout
+                android:id="@+id/ninchat_video_view_translucent_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/ninchat_translucent_background"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
 
 
         </RelativeLayout>
