--- a/ninchatsdk/src/main/res/drawable/ninchat_translucent_background.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_translucent_background.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <gradient
-        android:startColor="#e9e9e9"
-        android:endColor="@android:color/transparent"
-        android:angle="90"
-        />
-
+    <solid android:color="#21212180"/>
 </shape>
